# local2spoti

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-04-local2spoti.md
docs/superpowers/specs/: 2026-05-04-local2spoti-design.md
local2spoti/: acoustid.py  ai_match.py  artist_cache.py  artist_match.py  config.py  db.py  events.py  logging_config.py  main.py  matcher.py  models.py  musicbrainz.py  normalize.py  pipeline.py  playlist.py  ratelimit.py  recovery.py  repo.py  scanner.py  songlink.py  spotify_client.py  spotify_oauth.py  state.py  token_refresh.py
local2spoti/routes/: api.py  ui.py  ws.py
local2spoti/templates/: base.html  dashboard.html  files.html  review.html  scan.html
tests/: conftest.py  test_acoustid.py  test_ai_match.py  test_artist_cache.py  test_artist_match.py  test_config.py  test_db.py  test_events.py  test_library_config.py  test_main.py  test_matcher.py  test_models.py  test_musicbrainz.py  test_normalize.py  test_oauth_routes.py  test_pipeline.py  test_playlist.py  test_push_endpoint.py  test_ratelimit.py  test_repo.py  test_reset_endpoint.py  test_routes_api.py  test_routes_ui.py  test_scanner.py  test_songlink.py  test_spotify_client.py  test_spotify_oauth.py  test_token_refresh.py
