[project]
name = "local2spoti"
version = "0.1.0"
description = "Sync a local music library to Spotify playlists with rate-limit-bypassing match strategies (AcoustID + MusicBrainz + Odesli + ISRC + AI rescue)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Arseniy Seroka" }]
keywords = ["spotify", "music", "playlist", "acoustid", "musicbrainz", "isrc", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "uvloop>=0.21; sys_platform != 'win32'",
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "orjson>=3.10",
    "mutagen>=1.47",
    "rapidfuzz>=3.10",
    "spotipy>=2.24",
    "structlog>=24.4",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "tomli-w>=1.0",
    "pyacoustid>=1.3",
    "python-multipart>=0.0.18",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "freezegun>=1.5",
    "ruff>=0.7",
    "mypy>=1.13",
    "playwright>=1.48",
    "beautifulsoup4>=4.12",
    "asgi-lifespan>=2.1",
]

[project.scripts]
local2spoti = "local2spoti.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# Long inline SQL DDL and a few wide URL strings exceed even 120 cols;
# checking E501 against those is noise — ruff format keeps Python code
# itself within the limit.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# main.py loads .env via dotenv before importing modules whose Settings
# read from os.environ at import time. The order is intentional, so
# E402 (module-level imports not at top) is expected.
"local2spoti/main.py" = ["E402"]
# routes/api.py and playlist.py use lazy imports inside function
# bodies to avoid circular imports between layers.
"local2spoti/routes/api.py" = ["E402"]
"local2spoti/playlist.py" = ["E402"]
# tests stack module-level statements between imports for fixture wiring
# (load_dotenv-equivalents, conditional skips); the layout is fine.
"tests/*.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
# Strict mode is aspirational — flip back to `strict = true` once the
# remaining ~80 untyped-function annotations are filled in. Until then
# we keep mypy off the CI critical path (see .github/workflows/ci.yml)
# but leave the config here so `mypy local2spoti` works locally.
ignore_missing_imports = true
warn_unused_ignores = false
